--- a/WBCCAFE/Style.css
+++ b/WBCCAFE/Style.css
@@ -10,6 +10,22 @@ body {
     color: #432;
 }
 
+/*大きな背景画像*/
+.big-bg{
+    background-size: cover;
+    background-position: center top;
+    background-repeat: no-repeat;
+}
+
+#home {
+    background-image: url(images/main-bg.jpg);
+    min-height: 100vh;
+}
+
+#home .page-title{
+    text-transform: none;
+}
+
 a {
     text-decoration: none;
 }
@@ -52,4 +68,35 @@ img {
     max-width: 1100px;
     margin: 0 auto;
     padding: 0 4%;
+}
+
+.home-content{
+    text-align: center;
+    margin-top: 10%;
+}
+
+.home-content p{
+    font-size: 1.123rem;
+    margin: 10px 0 42px;
+}
+
+/*見出し*/
+.page-title{
+    font-size: 5rem;
+    font-family: 'Philosopher', serif;
+    text-transform: uppercase;
+    font-weight: normal;
+}
+
+/*ボタン*/
+.button {
+    font-size: 1.375rem;
+    background: #0bd;
+    color: #fff;
+    border-radius: 5px;
+    padding: 18px 32px;
+}
+
+.button:hover{
+    background: #0090aa;
 }
